Minor fixes and tweaks for client code
* Renamed `application.scss` to `style.scss`
  - Fix for an issue where `application.js` would not load when a
    stylesheet with the same name exists
* Adjusted footer to be 'sticky' instead of fixed
  - So long content pushes it off-screen until the user scrolls, instead
    of the footer obscuring the content
  - Switched the main content div to a `main` to achieve this
* Moved `_footer.scss` out of `app/client/packs`
  - `app/client/packs` should only contain entry-points
* Right-aligned the user dropdown menu in the navbar

--- a/app/client/stylesheets/_footer.scss
+++ b/app/client/stylesheets/_footer.scss
@@ -1,10 +1,17 @@
 @import '~bootstrap/scss/functions';
 @import '~bootstrap/scss/variables';
 
-.page-footer {
-  position: absolute;
-  bottom: 0;
+main {
+  // Short content pushes the footer to the bottom.
+  // Adjust to match (navbar + footer) height
+  min-height: calc(100vh - 475px);
 
+  @include media-breakpoint-up(lg) {
+    min-height: calc(100vh - 423px);
+  }
+}
+
+.page-footer {
   width: 100%;
 
   &.bg-dark {
